<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res/de.ankri">
	<de.ankri.views.Switch
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:layout_marginTop="10dp"
	    
	    app:textLeft="@string/on"
	    app:textRight="@string/off"
	    
	    android:id="@+id/btn_on_off"
	    />
	<de.ankri.views.Switch
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:layout_marginTop="30dp"
	    
	   	app:isChecked="true"
	    app:textLeft="@string/left"
	    app:textRight="@string/right"
	    
	    android:id="@+id/btn_left_right"
	    />
		

	<de.ankri.views.Switch
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:layout_marginTop="30dp"
	    
	    android:text="@string/cheer"
	    app:textLeft="@string/woohoo"
	    app:textRight="@string/yeah"
	    
	    android:id="@+id/btn_cheer"
	    />		
	    
	<de.ankri.views.Switch
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:layout_marginTop="30dp"
	    
	    android:text="@string/default_checked"
	    app:isChecked="true"
	    app:textLeft="@string/checked"
	    app:textRight="@string/unchecked"
	    
	    android:id="@+id/btn_checked_unchecked"
	    />		
		

</LinearLayout>
